--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,8 @@
 <!-- Theme JavaScript -->
 <script src="btsp/js/clean-blog.min.js"></script>
 
+<script src="../src/index.js"></script>
+
 <!--o botão da navbar não volta a encolher, tentei resolver não consegui.-->
 <script>
   $('.navbar-collapse a').click(function(){
