trying to fix this shit

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <!-- Optional Bootstrap theme Slate vitor-->
   <link rel="stylesheet" href="btsp/css/theme.min.css">
 
-  <link rel="stylesheet" href="../src/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Custom Fonts -->
   <link href="btsp/css/font-awesome.min.css" rel="stylesheet" type="text/css">
